--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root"></div>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="bundle.js"></script>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
